--- a/JUnitTester/saucery-tester/pom.xml
+++ b/JUnitTester/saucery-tester/pom.xml
@@ -13,25 +13,25 @@
         <logback.version>1.1.2</logback.version>
 
         <!-- util -->
-        <guava.version>18.0</guava.version>
-        <commons-lang3.version>3.4</commons-lang3.version>
+        <guava.version>23.1-jre</guava.version>
+        <commons-lang3.version>3.6</commons-lang3.version>
 
         <!-- testing -->
         <org.hamcrest.version>1.3</org.hamcrest.version>
         <junit.version>4.12</junit.version>
-        <mockito.version>1.10.19</mockito.version>
+        <mockito.version>2.10.0</mockito.version>
 
         <!-- maven plugins -->
-        <maven-compiler-plugin.version>3.3</maven-compiler-plugin.version>
-        <maven-surefire-plugin.version>2.18.1</maven-surefire-plugin.version>
-        <maven-resources-plugin.version>2.7</maven-resources-plugin.version>
+        <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
+        <maven-surefire-plugin.version>2.20.1</maven-surefire-plugin.version>
+        <maven-resources-plugin.version>3.0.2</maven-resources-plugin.version>
     </properties>
   
     <dependencies>
 	<dependency>
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
-            <version>2.4</version>
+            <version>2.9.9</version>
 	</dependency>
 	<dependency>
             <groupId>com.google.guava</groupId>
@@ -41,13 +41,13 @@
 	<dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.4</version>
+            <version>2.5</version>
 	</dependency>
 
 	<dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-collections4</artifactId>
-            <version>4.0</version>
+            <version>4.1</version>
 	</dependency>
 
 	<dependency>
@@ -84,11 +84,6 @@
             <artifactId>mockito-core</artifactId>
             <version>${mockito.version}</version>
             <scope>test</scope>
-	</dependency>
-	<dependency>
-            <groupId>au.com.fullcirclesolutions</groupId>
-            <artifactId>saucery-activation</artifactId>
-            <version>2.0.0-SNAPSHOT</version>
 	</dependency>
 	<dependency>
             <groupId>au.com.fullcirclesolutions</groupId>
