--- a/NUnit/Version3/Jenkinsfile
+++ b/NUnit/Version3/Jenkinsfile
@@ -19,7 +19,7 @@ pipeline {
         }
 		stage('SauceTest') {
             steps {
-				bat '"C:\\Program Files (x86)\\NUnit.org\\nunit-console\\nunit3-console.exe" "NUnit\\Version3\\UnitTests\\bin\\Release\\Saucery3Tester.dll" --result:junit-selenium-testsuite.xml;transform=nunit3-junit.xslt --trace=Verbose'
+				bat '"C:\\Program Files (x86)\\NUnit.org\\nunit-console\\nunit3-console.exe" "NUnit\\Version3\\Saucery3Tester\\bin\\Release\\Saucery3Tester.dll" --result:junit-selenium-testsuite.xml;transform=nunit3-junit.xslt --trace=Verbose'
             }
         }	
     }
