--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -25,7 +25,7 @@ jobs:
       with:
         dotnet-version: '5.0.401' # Check for latest at link at .NET 5 download page (https://dotnet.microsoft.com/download/dotnet/5.0)
     - run: dotnet build
-    - run: dotnet test $env.UT_PROJECT
+    - run: dotnet test ${{ env.UT_PROJECT }}
     #uses: b3b00/coverlet-action@1.1.1
     #with:
     #  testProject: $env.UT_PROJECT
