--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -6,12 +6,13 @@ on:
       - master
 
 env:
-  SOLN_FILE: Saucery.sln               # full path to your solution file
-  UT_PROJECT: UnitTests\\UnitTests.csproj  # full path to your unit test project file
+  SOLN_FILE: Saucery.sln                          # full path to your solution file
+  UT_PROJECT: UnitTests\\UnitTests.csproj         # full path to your unit test project file
+  UT_PROJECTDIR: UnitTests\\                      # unit test directory
   SAUCE_USER_NAME: ${{ secrets.SAUCE_USER_NAME }}
   SAUCE_API_KEY: ${{ secrets.SAUCE_API_KEY }}
   CONFIG: Release
-  APP_PACKAGE_PATH: 'published'        # set this to the path to your web app project, defaults to the repository root
+  APP_PACKAGE_PATH: 'published'                   # set this to the path to your web app project, defaults to the repository root
 
 jobs:
   build:
@@ -24,13 +25,14 @@ jobs:
     - name: Setup dotnet
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: '5.0.401' # Check for latest at link at .NET 5 download page (https://dotnet.microsoft.com/download/dotnet/5.0)
+        # Check for latest at link at .NET 5 download page (https://dotnet.microsoft.com/download/dotnet/5.0)
+        dotnet-version: '5.0.401'
     - run: dotnet build
     #- run: dotnet test ${{ env.UT_PROJECT }}
     - name: Run Unit Tests
       uses: b3b00/coverlet-action@1.1.1
       with:
-        testProject: ${{ env.UT_PROJECT }}
-        output: 'Coverage/'
+        testProject: ${{ env.UT_PROJECTDIR }}
+        output: 'opencover.info'
         outputFormat: 'opencover'
         excludes: '[program]*,[UnitTests]Tests.*,[Merlin]*'
