--- a/Saucery/Saucery.nuspec
+++ b/Saucery/Saucery.nuspec
@@ -13,30 +13,34 @@
     </releaseNotes>
     <summary>Sourcery for SauceLabs - Unlocking SauceLabs capability</summary>
     <projectUrl>https://github.com/Sauceforge/Saucery</projectUrl>
-    <iconUrl>http://sauceforge.github.io/Images/SauceryNUnit3_New.png</iconUrl>
+    <PackageIconUrl>http://sauceforge.github.io/Images/SauceryNUnit3_New.png</PackageIconUrl>
     <copyright>Copyright Andrew Gray 2014-2022</copyright>
     <tags>nunit saucelabs test testing tdd framework assert</tags>
-    <frameworkAssemblies>
+    <!--<frameworkAssemblies>
       <frameworkAssembly assemblyName="System.Core" targetFramework="net452" />
       <frameworkAssembly assemblyName="System.Xml" targetFramework="net452" />
-    </frameworkAssemblies>
+    </frameworkAssemblies>-->
     <dependencies>
-      <dependency id="Appium.WebDriver" version="5.0.0-beta01" />
-      <dependency id="Castle.Core" version="4.4.1" />
-      <dependency id="DotNetSeleniumExtras.WaitHelpers" version="3.11.0" />
-      <dependency id="Microsoft.NET.Test.Sdk" version="17.1.0" />
-      <dependency id="Newtonsoft.Json" version="13.0.1" />
-      <dependency id="NUnit" version="3.13.2" />
-      <dependency id="RestSharp" version="107.3.0" />
-      <dependency id="Selenium.Support" version="4.1.0" />
-      <dependency id="Selenium.WebDriver" version="4.1.0" />
+      <group targetFramework="net5.0">
+        <dependency id="Appium.WebDriver" version="5.0.0-beta01" />
+        <dependency id="Castle.Core" version="4.4.1" />
+        <dependency id="DotNetSeleniumExtras.WaitHelpers" version="3.11.0" />
+        <dependency id="Microsoft.NET.Test.Sdk" version="17.1.0" />
+        <dependency id="Newtonsoft.Json" version="13.0.1" />
+        <dependency id="NUnit" version="3.13.2" />
+        <dependency id="RestSharp" version="107.3.0" />
+        <dependency id="Selenium.Support" version="4.1.0" />
+        <dependency id="Selenium.WebDriver" version="4.1.0" />
+      </group>
       <!--<dependency id="Shouldly" version="4.0.3" />-->
       <!--<dependency id="NuGet.Core" version="2.14.0" />-->
     </dependencies>
   </metadata>
   <files>
-    <file src="bin\Release\Saucery.dll" target="lib\net5.0\" />
-    <file src="bin\Release\nunit.framework.dll" target="lib\net5.0\" /> <!--Got to do this to make it work-->
+    <file src="bin\Release\net5.0\Saucery.dll" target="lib\net5.0\" />
+    <file src="bin\Release\net5.0\nunit.framework.dll" target="lib\net5.0\" /> <!--Got to do this to make it work-->
+    <file src="bin\Release\net5.0\testhost.dll" target="lib\net5.0\" />
+    <file src="bin\Release\net5.0\Microsoft.TestPlatform.PlatformAbstractions.dll" target="lib\net5.0\" />
     <!--<file src="bin\Release\NuGet.Core.dll" target="lib\net452\" />--> <!--Got to do this to make it work-->
     <!--<file src="bin\Release\Microsoft.Web.XmlTransform.dll" target="lib\net452\" />--> <!--Got to do this to make it work-->
   </files>
