--- a/Saucery.Core/Saucery.Core.csproj
+++ b/Saucery.Core/Saucery.Core.csproj
@@ -20,8 +20,8 @@
 	      - Initial Release
 	    </PackageReleaseNotes>
 	    <PackageProjectUrl>https://github.com/Sauceforge/Saucery</PackageProjectUrl>
-	    <PackageIconUrl>http://sauceforge.github.io/Images/Saucery.Core.png</PackageIconUrl>
-		<PackageTags>nunit saucelabs test testing tdd framework assert</PackageTags>
+	    <PackageIcon>Saucery.Core.png</PackageIcon>
+	    <PackageTags>saucelabs test testing tdd framework assert</PackageTags>
 	    <Title>The Official Saucery Library</Title>
 	</PropertyGroup>
 
@@ -35,6 +35,7 @@
 		<PackageReference Include="Selenium.Support" Version="4.8.1" />
 		<PackageReference Include="Selenium.WebDriver" Version="4.8.1" />
 		<PackageReference Include="Shouldly" Version="4.1.0" />
+		<None Include="Images\Saucery.Core.png" Pack="true" PackagePath="\" />
 	</ItemGroup>
 
 	<ItemGroup>
