add compile to publish pipeline

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,10 +17,20 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      #- name: Setup NuGet
-      #  uses: NuGet/setup-nuget@v1.0.5
+      - name: Setup dotnet
+        uses: actions/setup-dotnet@v2
+        with:
+          # Check for latest at link at .NET 7 download page (https://dotnet.microsoft.com/download/dotnet/7.0)
+          dotnet-version: 7.0.x
+          #dotnet-version: | 
+          #  3.1.x
+          #  5.0.x
+      
+      - name: Compile solution
+        run: dotnet build -c ${{ env.CONFIG }}
 
       - name: Pack NuGet package
         run: dotnet pack -c ${{ env.CONFIG }} ${{ env.PROJECT_NAME }}\${{ env.PROJECT_NAME }}.csproj -o ${{ env.NUPKG_DIR }}
+
       - name: Push generated package to NuGet
         run: dotnet nuget push ${{ env.NUPKG_DIR }}\*.nupkg -Source '${{ NUGET_SOURCE }}' --api-key ${{ env.NUGET_API_KEY }}
